Testy i zmiana uri dla endpointów typu POST
